--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "raunak-srivastava-portfolio---netflix-edition",
+  "name": "raunak-srivastava-|-product-marketing-manager-portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
