feat: Update role and portfolio metadata
Reflects the updated professional title to 'Strategy & Marketing Consultant' and adjusts the portfolio description to match. Includes minor animation and styling tweaks for better user experience.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "raunak-srivastava-|-product-marketing-manager-portfolio",
+  "name": "raunak-srivastava-|-strategy-&-marketing-consultant",
   "private": true,
   "version": "0.0.0",
   "type": "module",
